# largesd

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =1.0.0  =4.0.0  =5.0.0  ACCEPTANCE_AUTH_CSRF_RATE_LIMIT_FIX_PLAN.txt  CHANGELOG.md  CONTRIBUTING.md  DESIGN.json  Dockerfile  EMAIL_MECHANISM_IMPROVEMENT_PLAN.txt  FACT_CHECK_GAP_FIXES.txt  FACT_CHECK_V15_FIXES.md  Formulas.txt  IMPLEMENTATION_PLAN.txt  IMPLEMENTATION_SUMMARY.md  LSD_FactCheck_Design_Plan_v1_4.txt  LSD_FactCheck_v1_5_1_IMPLEMENTATION_GAPS_PLAN.txt  LSD_v1_2_Implementation_Plan.txt  LSD_v1_2_gap_closure_plan.txt  Makefile  NEXT_STEPS_TO_90_PERCENT.txt  PRODUCT.md  PROJECT_LOGBOOK.md  README.md  REQUIREMENT_CHANGE_REQUEST_GITHUB_PUBLISHING.md  TESTING.md  Updated gold set.numbers  V3_MIGRATION_GUIDE.md  WORKFLOW.md  alembic.ini  bandit-report.json  cleanup_debates_without_user.py  docker-compose.yml  mypy.ini  package-lock.json  package.json  pip-audit-report.json  (+29 more)
LSD_FactCheck_v1_5_1/: 02_SYNTHESIS_ENGINE.md  03_PIPELINE.md  README.md
acceptance/: LSD_v1_2_traceability.md  lsd_v1_2_criteria.json  run_a11y_scan.py  run_ui_acceptance.py  ui_debate_flow.json
alembic/: env.py
archive/: backend_app_legacy.py  backend_app_v2_legacy.py  backend_debate_engine_legacy.py  start_server.py  start_server_fast.py  start_server_v2.py
backend/: app.py  app_v2.py  app_v3.py  database.py  database_v3.py  db_engine.py  debate_engine.py  debate_engine_v2.py  debate_proposal.py  decision_dossier.py  email_processor.py  email_submission_auth.py  email_submission_parser.py  evidence_targets.py  (+21 more)
(+451 files in other folders)
