[project]
name = "debate-system"
version = "0.3.0"
description = "Blind, auditable debate adjudication prototype"
requires-python = ">=3.11"
dependencies = [
    "nh3>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 disabled: legacy codebase has ~240 long lines; re-enable after incremental cleanup
ignore = ["E501"]
